Added closing tag for actions in package template. Incremented version number to 0.2.1.

--- a/src/templates/package.template.xml
+++ b/src/templates/package.template.xml
@@ -31,6 +31,7 @@
       installTransform="~/App_Plugins/whodunit/Transforms/dashboard.config.install.xdt"
       uninstallTransform="~/App_Plugins/whodunit/Transforms/dashboard.config.uninstall.xdt"
       file="~/Config/Dashboard.config" />
+  </Actions>
   <files>
     <% files.forEach(function(file) { %>
     <file>
